DevOps_Session3/EKS/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: node-app
    environment: development
  name: svc-lb-node-app
  namespace: ns-pilot
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    application: node-app
    environment: development
  type: LoadBalancer
